fix broken style for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -208,7 +208,7 @@ em {
   .App__button {
     width: 86px;
     margin: 0 0.4rem;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
 
   .App__category {
