--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,9 @@ body.hidden {
     opacity: 1;
   }
 }
+
+@media screen and (max-width: 560px) {
+  html {
+    font-size: 9px;
+  }
+}
